update Makefile and update backend.confg

--- a/environment/development/backend.config
+++ b/environment/development/backend.config
@@ -1,6 +1,6 @@
 bucket  = "tf-statefiles-eu-west-1"
 dynamodb_table = "eu-west-1-tfstate"
-key     = "development/terraform.tfstate"
+key     = "development/.terraform/terraform.tfstate"
 encrypt = true
-profile = "victor-test"
-region  = "eu-west-1"
+profile = "your-aws-profile"
+region  = "your-aws-region"
