--- a/environment/development/backend.config
+++ b/environment/development/backend.config
@@ -1,6 +1,6 @@
-bucket  = "tf-statefiles-eu-west-1"
-dynamodb_table = "eu-west-1-tfstate"
+bucket  = "dev-tfstate-eu-west-1"
+dynamodb_table = "dev-tfstate-eu-west-1"
 key     = "development/.terraform/terraform.tfstate"
 encrypt = true
-profile = "your-aws-profile"
-region  = "your-aws-region"
+profile = "" 
+region  = ""
