--- a/environment/production/backend.config
+++ b/environment/production/backend.config
@@ -1,6 +1,6 @@
-bucket  = "tf-statefiles-us-west-1"
-#dynamodb_table = "eu-west-1-tfstate"
-key     = "production/terraform.tfstate"
+bucket  = "prod-tfstate-us-west-1"
+dynamodb_table = "prod-tfstate-us-west-1"
+key     = "production/.terraform/terraform.tfstate"
 encrypt = true
-profile = "your-aws-profile"
-region  = "your-aws-region"
+profile = "" 
+region  = ""
